# lunch_picker

./: .clippy.toml  .envrc  .gitignore  .rustfmt.toml  Cargo.toml  ClientTests.http  README.md  ShittyLunchApi.yaml  config.toml  gooby.db  http-client.env.json  spec.yaml  sqlx-data.json
.github/workflows/: release.yaml  rust.yaml  rust_release.yaml
.sqlx/: query-08d5da2d37aeea6addc92dab5edc998afebf1a1693f7a47b1a4018b2bd22dd2d.json  query-095f85cb692bdd4ceccffba6f499c88f8cbbefa8e1801d878e7d82eb9930e133.json  query-0b7f39f009f2d9b543fdb1ca09f758277c5d88baaf27b701be2a90acdd04bf0c.json  query-39339a9579b230f1af138048e57f8abbb0caf0a19ef1c2fb08a35976af1e4364.json  query-4b2d94d6265e9f08ec074aa306900a0aade545f01af0e8826b1bf772806ab8d8.json  query-8219a07b4af33f2e688c23f90044d651a6e2cc64204953537dc1ca0af5f58e4c.json  query-860f41868cc32786604249e68cfe06f915ab7d9d51f6207612f0014f7f186344.json  query-96d3cb3704e86e2f8275ae3bf01a9681a7f1f4a904d12e8c215840a9bd37ad84.json  query-a05c62847741e2bb74326dcc4425e51b13eda8ce8f6ac4aa8fe4b8a5e6702647.json  query-b3adf4ff3f5f34d3bbd6cefb84c9bf2e90f5346bc571163ec1eadb8bd0845328.json  query-c5f2fa900da9c7ab09db38599a2cfeffb70c17a8fbd91f395c5752f7caca844c.json  query-c7668ca4453f1332f7f75f1f803796de2cb4b646b7bb5025307e97d205c72f70.json  query-c8d2daf44d341733c7c00b407001f49528f216c278f1229ee70f7768b5f27b6f.json  query-ca9341c37069395f854e81acd0c075ccf50b1105579bc9b74b39b825fca8b856.json  query-eaa1dd0e7a4566df3be3660e626bf331e4c5c30668ae83206843f5c605555c85.json
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: health.rs  homies.rs  mod.rs
cli/: Cargo.toml
cli/src/: cli_args.rs  lib.rs  main.rs
cli/src/sql/: get_all_homies.sql  insert_homies_favorites.sql  insert_recipe.sql
common/: Cargo.toml
common/migrations/: 20230603012307_inital-create.down.sql  20230603012307_inital-create.up.sql
common/src/: lib.rs
common/src/db/: mod.rs
common/src/domain/: mod.rs  models.rs
common/src/sql/: delete_homies_favorites.sql  get_all_recipes.sql  get_homies_favorites.sql
features/: Cargo.toml
features/src/: get_homie_by_name.rs  lib.rs  recents.rs  recipes.rs  restaurants.rs
features/src/homies/: create.rs  get_all_homies.rs  models.rs
features/src/homies_favorites/: get_restaurants.rs  restaurants.rs
features/src/recipes/: models.rs
features/src/restaurants/: create_restaurant.rs  get_all_restaurants.rs  get_candidates.rs  models.rs
lunch_picker/: Cargo.toml
lunch_picker/migrations/postgres/: 20230603012307_inital-create.down.sql
lunch_picker/src/: config.rs  db.rs  interaction.rs  lib.rs  main.rs
lunch_picker/tests/: homies.rs  homies_favorite_restaurants.rs
lunch_picker/tests/fixtures/: homies.sql  homies_favorite_restaurants.sql
lunch_picker/tests/fixtures/postgres/: homies_favorite_restaurants.sql
lunch_picker_postgres/: Cargo.toml
lunch_picker_postgres/src/homies/: create.rs
lunch_picker_postgres/src/homies_favorites/: remove_homies_favorite_restaurant.rs
lunch_picker_postgres/src/restaurants/: create_restaurant.rs
lunch_picker_postgres/tests/: recent_restaurants.rs
lunch_picker_sqlite/: Cargo.toml
lunch_picker_sqlite/src/: homies_favorites.rs
lunch_picker_sqlite/src/homies/: create.rs  get_all_homies.rs
lunch_picker_sqlite/src/homies_favorites/: restaurants.rs
lunch_picker_sqlite/src/recents/: add_recent_restaurant.rs
migrations/: 20230602034848_inital_create.sql  20230603012307_inital-create.down.sql  20230603012307_inital-create.up.sql  20230603012347_data.down.sql  20230603012347_data.up.sql  20230606050227_homies_favorites.down.sql  20230606050227_homies_favorites.up.sql  20230606051335_homies_recents.up.sql  20231017043835_Pantry_Expansion.down.sql  20231017043835_Pantry_Expansion.up.sql  20240628044251_homies_recent_restaurants_view.down.sql  20240628044251_homies_recent_restaurants_view.up.sql  20240628044251_recipes.down.sql  20240628044251_recipes.up.sql.sql
migrations/postgres/: 20240628044251_recipes.down.sql  20240628044251_recipes.up.sql.sql
migrations/sqlite/: 20230603012307_inital-create.up.sql
models/: Cargo.toml
sql/: get_all_homies.sql  insert_homie.sql
src/: cli_args.rs  config.rs  db.rs  features.rs  interaction.rs  lib.rs  main.rs  models.rs  startup.rs  user.rs  validator.rs
src/algorithms/: mod.rs
src/api/: health.rs  homies.rs  mod.rs
src/data_access/: mod.rs
src/db/: mod.rs
src/domain/: mod.rs
src/features/: create_homie.rs  create_recipe.rs  get_all_homies.rs  get_homie_by_name.rs  homies.rs  homies_favorites.rs  restaurants.rs
src/features/homies/: create.rs  get_all_homies.rs  models.rs
src/features/homies_favorites/: get_restaurants.rs  remove_homies_favorite_restaurant.rs  restaurants.rs
src/features/recents/: add_recent_restaurant.rs
src/features/recipes/: create.rs
src/features/restaurants/: create_restaurant.rs  get_all_restaurants.rs  get_candidates.rs  models.rs
src/models/: db_rows.rs  mod.rs
src/routes/: homies.rs
src/stuff/: mod.rs
src/user_input/: mod.rs
tests/: ClientTests.http  get_restaurant_candidates.rs  homies.rs  homies_favorite_restaurants.rs  http-client.env.json  recent_restaurants.rs  recipes.rs  restaurants.rs
tests/fixtures/: homies.sql  homies_favorite_restaurants.sql  recent_restaurants.sql  recipes.sql  restaurants.sql
tests/fixtures/postgres/: homies.sql  homies_favorite_restaurants.sql  recent_restaurants.sql  restaurants.sql
tests/sqlite/: main.rs
