[package]
name = "lunch_picker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3"

[dependencies.sqlx]
version = "0.7"
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"]

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
