[package]
name = "lunch_picker"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
sqlite_tests = []

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = { version = "0.8", default-features = false }
dialoguer = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
opentelemetry = { version = "0.23", default-features = false }
tracing-opentelemetry = { version = "0.24", default-features = false }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"], default-features = false }
opentelemetry-otlp = "0.16"
futures = { version = "*", features = ["executor"], default-features = false }
dirs = "5.0.1"


[dependencies.sqlx]
version = "0.7"
features = ["chrono", "macros", "migrate", "sqlite", "runtime-tokio-rustls"]
default-features = false

