[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18" }
common = { path = "../common" }
hyper = { version = "0.14.13", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.71"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
jsonwebtoken = "8"

[dependencies.sqlx]
version = "0.6.3"
features = ["postgres", "sqlite", "runtime-tokio-rustls", "macros", "offline", "chrono", "uuid"]
