[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
sqlx = { version = "0.6.3", features = ["postgres", "sqlite", "runtime-tokio-rustls", "macros", "offline", "chrono", "uuid"] }
