[package]
name = "features"
version = "0.1.0"
edition = "2021"

[features]
default = ["postgres"] # soon to be sqlite
postgres_tests = ["postgres" , "sqlx/migrate"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
sqlite_tests = ["sqlite"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-stdout = { version = "0.4", features = ["trace"] }
tracing-opentelemetry = "0.24"
init-tracing-opentelemetry = { version = "0.18", features = [ "otlp", "tracing_subscriber_ext", ] }
tracing-opentelemetry-instrumentation-sdk =  { version = "0.18" }
opentelemetry_sdk = {version="0.23" , features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16" , features = ["tonic", "default"] }
futures = "*"
dirs = "5.0.1"

models = { path = "../models" }

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls", "macros", "chrono", "uuid"]


